--- a/ms_drafts/deriving the ISD exponent.qmd
+++ b/ms_drafts/deriving the ISD exponent.qmd
@@ -22,7 +22,7 @@ $$
 
 where $\alpha$ is the trophic transfer efficiency, ranging from 0 (no energy transfer) to 1 (all energy is transferred) and $\beta$ is the body mass ratio of consumers to their resources. $\beta$ is assumed to be \>\>1, since predators are assumed to be much larger than their prey. The 3/4 is derived from the quarter scaling laws.
 
-Across a broad range of $\alpha$ and $\beta$, these are the prediction of the ISD exponent.
+These are the predictions of the ISD exponent across a broad range of $\alpha$ and $\beta$.
 
 ```{r}
 alpha = seq(0.01,1, length.out = 10)
@@ -42,7 +42,7 @@ simulations %>%
   labs(title = "ISD predictions assuming the 3/4 power scaling")
 ```
 
-As shown in the figure above, predicted values of the ISD exponent converge to \~2 at moderate levels of trophic transfer efficiency ($\alpha$) and at large ratios of consumer to resource sizes ($\beta$). Our samples with NEON are typically closer to -1.5 or less. However, from this equation, the only way to generate samples close to that empirical value is to change the -3/4 scaling assumption, which implies changing the -3/4 value. For example, changing -3/4 to -1/3 places the predicted values closer to the observed levels.
+As shown in the figure above, predicted values of the ISD exponent converge to around -2 at moderate levels of trophic transfer efficiency ($\alpha$) and at large ratios of consumer to resource sizes ($\beta$). Our samples with NEON are typically closer to -1.5 or less. However, from this equation, the only way to generate samples close to -1.5 empirical value is to change the -3/4 scaling assumption, which implies changing the -3/4 value. For example, changing -3/4 to -1/3 places the predicted values closer to the observed levels.
 
 ```{r}
 alpha = seq(0.01,1, length.out = 10)
@@ -59,5 +59,5 @@ simulations %>%
   geom_line(aes(group = alpha)) +
   ylim(-5, 0) +
   geom_hline(yintercept = -1.5) +
-  labs(title = "ISD predictions assuming the 3/4 power scaling")
+  labs(title = "ISD predictions assuming the 1/3 power scaling")
 ```
