add new folders and blank files; update repo_organization.RMD to match

--- a/Repo_organization.Rmd
+++ b/Repo_organization.Rmd
@@ -53,7 +53,7 @@ neon_size_spectra/
       |─── mean-annual-data.rds
       |─── annual-data.rds
   |─── code/
-    |─── custom_functions/
+    |─── custom-functions/
       |─── LW_coef.R
       |─── est_dw.R
       |─── etc..
